<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
		android:id="@+id/header">
        
        <ImageView 
            android:id="@+id/icon"
            android:layout_width="@dimen/icon_l"
            android:layout_height="@dimen/icon_l"
            android:scaleType="centerInside"
            android:padding="@dimen/icon_padding_m"
            android:src="@drawable/ic_customer"/>
        
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/margin_m">
            
            <TextView 
	            android:id="@+id/t_code"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="@dimen/text_l"
	            android:textStyle="bold"
	            android:lines="1"/>
            
            <TextView 
	            android:id="@+id/t_added"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:lines="1"
	            android:textSize="@dimen/text_l"
	            android:textStyle="bold"/>
            
        </LinearLayout>
        
    </LinearLayout>
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
		android:layout_below="@+id/header">
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
			android:paddingBottom="@dimen/list_footer_height"
			android:paddingTop="@dimen/margin_xxxxl">

			<EditText
				android:id="@+id/et_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="left"
				android:hint="@string/name"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="@dimen/margin_m"
				android:gravity="center_vertical">

				<ImageView
					android:layout_width="@dimen/icon_small"
					android:layout_height="@dimen/icon_small"
					android:scaleType="centerInside"
					android:src="@drawable/ic_rate"
					android:padding="@dimen/icon_padding_s"/>

				<EditText
					android:id="@+id/et_rate"
					android:layout_width="match_parent"
					android:inputType="numberDecimal"
					android:layout_height="wrap_content"
					android:gravity="left"
					android:hint="@string/default_rate"
					android:textStyle="bold"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="center_vertical"
				android:visibility="gone">

				<ImageView
					android:layout_width="@dimen/icon_small"
					android:layout_height="@dimen/icon_small"
					android:scaleType="centerInside"
					android:src="@drawable/ic_money"
					android:padding="@dimen/icon_padding_m"/>

				<EditText
					android:id="@+id/et_discount"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:inputType="numberDecimal"
					android:gravity="left"
					android:textStyle="bold"
					android:hint="@string/discount_small"
					android:layout_height="wrap_content"/>

			</LinearLayout>
            
            
            <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:gravity="center_vertical"
	            android:layout_marginTop="@dimen/margin_m">

	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textSize="@dimen/text_m"
	                android:textColor="@color/app_second_color"
	                android:text="@string/contacts"
	                android:layout_marginLeft="@dimen/margin_xs"
	                android:layout_marginRight="@dimen/margin_xs"/>
	            
	            <View 
	                android:layout_width="0dp"
	                android:layout_weight="1"
	                android:layout_height="@dimen/header_line_height"
	                android:background="@color/app_second_color"/>
	            	            
	        </LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="@dimen/margin_xs"
				android:gravity="top">

				<ImageView
					android:layout_width="@dimen/icon_small"
					android:layout_height="@dimen/icon_small"
					android:scaleType="centerInside"
					android:src="@drawable/address"
					android:padding="@dimen/icon_padding_s"
					android:layout_marginTop="@dimen/margin_xs"/>

				<EditText
					android:id="@+id/et_address"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:inputType="textMultiLine"
					android:layout_height="@dimen/field_height_xxxxl"
					android:gravity="left"
					android:hint="@string/address"/>

			</LinearLayout>

            <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginTop="@dimen/margin_xs"
		        android:gravity="center_vertical">

				<ImageView
					android:layout_width="@dimen/icon_small"
					android:layout_height="@dimen/icon_small"
					android:scaleType="centerInside"
					android:src="@drawable/phone"
					android:padding="@dimen/icon_padding_s"/>
		        
		        <EditText 
		            android:id="@+id/et_tel_1"
		            android:layout_width="0dp"
		            android:layout_weight="1"
		            android:inputType="phone"
		            android:layout_height="wrap_content"
		            android:gravity="left"
					android:hint="@string/tel"/>
		        	        
		    </LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="@dimen/margin_xs"
				android:gravity="center_vertical"
				android:visibility="gone">

				<ImageView
					android:layout_width="@dimen/icon_small"
					android:layout_height="@dimen/icon_small"
					android:scaleType="centerInside"
					android:src="@drawable/phone"
					android:padding="@dimen/icon_padding_s"/>

				<EditText
					android:id="@+id/et_tel_2"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:inputType="phone"
					android:layout_height="wrap_content"
					android:gravity="left"
					android:hint="@string/tel"/>

			</LinearLayout>
	       
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginTop="@dimen/margin_xs"
		        android:gravity="center_vertical"
				android:visibility="gone">

		        <EditText 
		            android:id="@+id/et_fax"
		            android:layout_width="0dp"
		            android:layout_weight="1"
		            android:inputType="phone"
		            android:layout_height="wrap_content"
		            android:gravity="left"
					android:hint="@string/fax"/>
		        	        
		    </LinearLayout>
	        
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginTop="@dimen/margin_xs"
		        android:gravity="center_vertical">

				<ImageView
					android:layout_width="@dimen/icon_small"
					android:layout_height="@dimen/icon_small"
					android:scaleType="centerInside"
					android:src="@drawable/email"
					android:padding="@dimen/icon_padding_s"/>
		        
		        <EditText 
		            android:id="@+id/et_email_1"
		            android:layout_width="0dp"
		            android:layout_weight="1"
		            android:inputType="textEmailAddress"
		            android:layout_height="wrap_content"
		            android:gravity="left"
					android:hint="@string/email"/>
		        	        
		    </LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="@dimen/margin_xs"
				android:gravity="center_vertical"
				android:visibility="gone">

				<ImageView
					android:layout_width="@dimen/icon_small"
					android:layout_height="@dimen/icon_small"
					android:scaleType="centerInside"
					android:src="@drawable/email"
					android:padding="@dimen/icon_padding_s"/>

				<EditText
					android:id="@+id/et_email_2"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:inputType="textEmailAddress"
					android:layout_height="wrap_content"
					android:gravity="left"
					android:hint="@string/email"/>

			</LinearLayout>
		    
	       <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginTop="@dimen/margin_xs"
		        android:gravity="center_vertical">

			    <ImageView
				   android:layout_width="@dimen/icon_small"
				   android:layout_height="@dimen/icon_small"
				   android:scaleType="centerInside"
				   android:src="@drawable/web"
				   android:padding="@dimen/icon_padding_s"/>

		         <EditText
		            android:id="@+id/et_web"
		            android:layout_width="0dp"
		            android:layout_weight="1"
		            android:inputType="textWebEditText"
		            android:layout_height="wrap_content"
		            android:gravity="left"
					 android:hint="@string/web"/>
		        	        
		    </LinearLayout>
		    
	       <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginTop="@dimen/margin_xs"
		        android:gravity="center_vertical">

			   <ImageView
				   android:layout_width="@dimen/icon_small"
				   android:layout_height="@dimen/icon_small"
				   android:scaleType="centerInside"
				   android:src="@drawable/facebook"
				   android:padding="@dimen/icon_padding_s"/>
		        
		        <EditText 
		            android:id="@+id/et_facebook"
		            android:layout_width="0dp"
		            android:layout_weight="1"
		            android:layout_height="wrap_content"
		            android:gravity="left"
					android:hint="@string/facebook"/>
		        	        
		    </LinearLayout>
		    
	       <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginTop="@dimen/margin_xs"
		        android:gravity="center_vertical">

			   <ImageView
				   android:layout_width="@dimen/icon_small"
				   android:layout_height="@dimen/icon_small"
				   android:scaleType="centerInside"
				   android:src="@drawable/skype"
				   android:padding="@dimen/icon_padding_s"/>
		        
		        <EditText 
		            android:id="@+id/et_skype"
		            android:layout_width="0dp"
		            android:layout_weight="1"
		            android:layout_height="wrap_content"
		            android:gravity="left"
					android:hint="@string/skype"/>
		        	        
		    </LinearLayout>  

			<EditText
				android:id="@+id/et_bank_details"
				android:layout_width="match_parent"
				android:inputType="textMultiLine"
				android:layout_height="@dimen/field_height_xxxxl"
				android:gravity="left"
				android:hint="@string/bank_details"
				android:layout_marginTop="@dimen/margin_xs"
				android:visibility="gone"/>

			<EditText
				android:id="@+id/et_comment"
				android:layout_width="match_parent"
				android:inputType="textMultiLine"
				android:layout_height="@dimen/field_height_xxxxl"
				android:gravity="left"
				android:hint="@string/comment"
				android:layout_marginTop="@dimen/margin_m"/>
            
        </LinearLayout>
        
    </ScrollView>

    
   <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
	   android:gravity="end"
	   android:padding="@dimen/margin_l"
	   android:layout_alignParentBottom="true">

	   <ImageButton
		   android:id="@+id/save"
		   android:layout_width="@dimen/button_size_xl"
		   android:layout_height="@dimen/button_size_xl"
		   android:layout_alignParentBottom="true"
		   android:background="@drawable/selector_button_circular"
		   android:src="@drawable/ok"
		   android:scaleType="centerInside"
		   android:padding="@dimen/button_padding_l"/>

	   <ImageButton
		   android:id="@+id/discard"
		   android:layout_width="@dimen/button_size_xl"
		   android:layout_height="@dimen/button_size_xl"
		   android:layout_alignParentBottom="true"
		   android:background="@drawable/selector_button_circular"
		   android:src="@drawable/cancel"
		   android:scaleType="centerInside"
		   android:padding="@dimen/button_padding_l"
		   android:layout_marginLeft="@dimen/margin_l"/>
        
    </LinearLayout>
    
    
</RelativeLayout>
